--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,19 @@
 [workspace]
 members = [
-    "packages/bot",
-    "packages/monitor",
+    "packages/bot/api",
+    "packages/bot/impl",
+    "packages/monitor/api",
+    "packages/monitor/impl",
 ]
 resolver = "2"
 
+[workspace.package]
+version = "0.1.0"
+edition = "2021"
+
 [workspace.dependencies]
 candid = "0.10.10"
-ic-cdk = "0.17.0"
+ic-cdk = "0.18.0-alpha.2"
 ic-cdk-timers = "0.11.0"
 ic-http-certification = "2.5.0"
 icrc-ledger-types = "0.1.5"
@@ -17,12 +23,14 @@ async-trait = "0.1.86"
 serde = "1.0.217"
 serde_json = "1.0.138"
 rmp-serde = "1.3.0"
+sha2 = "0.10.8"
+hex = "0.4.3"
+futures = "0.3"
 clap = { version = "4.5.32", features = ["derive"] }
 ansi-to-html = {version = "0.2.2", default-features = false}
 shell-words = "1.1.0"
 oc_bots_sdk = {git = "https://github.com/open-chat-labs/open-chat-bots.git"}
 oc_bots_sdk_canister = {git = "https://github.com/open-chat-labs/open-chat-bots.git"}
-
 
 [profile.release]
 lto = true
