--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 
 [workspace.dependencies]
 candid = "0.10.10"
-ic-cdk = "0.18.0-alpha.2"
+ic-cdk = "0.17.0"
 ic-cdk-timers = "0.11.0"
 ic-http-certification = "2.5.0"
 icrc-ledger-types = "0.1.5"
@@ -29,6 +29,7 @@ futures = "0.3"
 clap = { version = "4.5.32", features = ["derive"] }
 ansi-to-html = {version = "0.2.2", default-features = false}
 shell-words = "1.1.0"
+getrandom = {version = "0.2.15", features = ["custom"]}
 oc_bots_sdk = {git = "https://github.com/open-chat-labs/open-chat-bots.git"}
 oc_bots_sdk_canister = {git = "https://github.com/open-chat-labs/open-chat-bots.git"}
 
