--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ ic-cdk = "0.17.0"
 ic-cdk-timers = "0.11.0"
 ic-http-certification = "2.5.0"
 icrc-ledger-types = "0.1.5"
+ic-ledger-types = "0.14.0"
 ic-stable-structures = "0.6.7"
 ic-wasi-polyfill = "0.6.4"
 async-trait = "0.1.86"
