--- a/packages/bot/impl/Cargo.toml
+++ b/packages/bot/impl/Cargo.toml
@@ -11,6 +11,7 @@ candid = {workspace = true}
 ic-cdk = {workspace = true}
 ic-cdk-timers = {workspace = true}
 ic-http-certification = {workspace = true}
+ic-ledger-types = {workspace = true}
 icrc-ledger-types = {workspace = true}
 ic-stable-structures = {workspace = true}
 ic-wasi-polyfill = {workspace = true}
