--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ icrc-ledger-types = "0.1.5"
 ic-ledger-types = "0.14.0"
 ic-stable-structures = "0.6.7"
 ic-wasi-polyfill = "0.6.4"
+canfund = "0.8.2"
 async-trait = "0.1.86"
 serde = "1.0.217"
 serde_json = "1.0.138"
