--- a/packages/bot/impl/Cargo.toml
+++ b/packages/bot/impl/Cargo.toml
@@ -15,6 +15,7 @@ ic-ledger-types = {workspace = true}
 icrc-ledger-types = {workspace = true}
 ic-stable-structures = {workspace = true}
 ic-wasi-polyfill = {workspace = true}
+canfund = {workspace = true}
 async-trait = {workspace = true}
 serde = {workspace = true}
 serde_json = {workspace = true}
